--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,16 @@
 </head>
 
 <body>
-    <div class="contanier">
-        <h1>Tuim</h1>
+    <div class="main">
+        <div class="card acrylic shadow blue">
+            <h1>Tuim</h1>
+        </div>
+        <div class="footer">
+            <img src="/icon/favicon-16x16.png">
+            Tuim&nbsp;©2020&nbsp;
+            <a href="https://twitter.com/3illrocha">twitter.com/3illrocha</a>
+        </div>
     </div>
 </body>
+
 </html>
