--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,12 @@
             Tuim&nbsp;©2020&nbsp;
             <a href="https://twitter.com/3illrocha">twitter.com/3illrocha</a>
         </div>
-    </div>
+
+        <div class="info">
+            <a href="https://www.freepik.com/free-photos-vectors/background">Background photo created by flatart -
+                www.freepik.com</a><br>
+            <a href="">Conheça o pássaro Tuim (Forpus Xanthopterygius)</a>
+        </div>
 </body>
 
 </html>
