add OG meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,33 @@
     <link rel="manifest" href="/icon/site.json">
     <link rel="mask-icon" href="/icon/safari-pinned-tab.svg" color="#0085b2">
     <link rel="shortcut icon" href="/icon/favicon.ico">
+
+    <!-- Application -->
     <meta name="apple-mobile-web-app-title" content="Tuim">
     <meta name="application-name" content="Tuim">
     <meta name="msapplication-TileColor" content="#0085b2">
     <meta name="msapplication-config" content="/icon/browserconfig.xml">
     <meta name="theme-color" content="#0085b2">
+
+    <!-- OpenGraph -->
+    <meta property="og:locale" content="pt_BR">
+    <meta property="og:url" content="https://tuim.app">
+    <meta property="og:title" content="Nascendo um Tuim...">
+    <meta property="og:site_name" content="Tuim">
+    <meta property="og:description" content="Nesse ninho de Tuim está para nascer uma celebridade mundial!">
+
+    <!-- Image -->
+    <meta property="og:image" content="https://tuim.app/img/og.jpg">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:width" content="1000">
+    <meta property="og:image:height" content="1000">
+
+    <!-- Article -->
+    <meta property="og:type" content="article">
+    <meta property="article:author" content="twitter.com/3illrocha">
+    <meta property="article:section" content="Ninho">
+    <meta property="article:tag" content="twitter, tuim, ninho, em breve, logo, ovo de tuim">
+    <meta property="article:published_time" content="2020-07-01 00:00:00.0">
 
     <link rel="stylesheet" href="/css/style.css">
     <script src="/js/script.js" defer></script>
