--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <meta property="article:published_time" content="2020-07-01 00:00:00.0">
 
     <link rel="stylesheet" href="/css/style.css">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171288641-1"></script>
     <script src="/js/script.js" defer></script>
 </head>
 
@@ -61,6 +62,7 @@
             <a href="http://apassarinhologa.com.br/tuim-forpus-xanthopterygius">Conheça o pássaro Tuim (Forpus
                 Xanthopterygius)</a>
         </div>
+
 </body>
 
 </html>
