update Twitter link

--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         <div class="footer">
             <img src="/icon/favicon-16x16.png">
             Tuim&nbsp;©2020&nbsp;
-            <a href="https://twitter.com/3illrocha">twitter.com/3illrocha</a>
+            <a href="https://twitter.com/ninhoTuim">twitter.com/3illrocha</a>
         </div>
 
         <div class="info">
